fixed alignment of character-container

--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -26,5 +26,6 @@ h2 {
 
 .App div {
   display: flex;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
